--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "toastify-js": "^1.12.0"
   }
 }
